[package]
name = "dex-v3"
version = "0.1.0"
authors = ["ellttBen <elliott@bonfida.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
num-derive = "0.3.3"
solana-program = "1.7.10"
bytemuck = "1.7.2"
num_enum = "0.5.4"
borsh = "0.9.1"
thiserror = "1.0.24"
num-traits = "0.2"
enumflags2 = "0.7.1"
spl-token = "3.2.0"
agnostic-orderbook = {path = "../../agnostic-orderbook/program", features = ["no-entrypoint"]}

[lib]
crate-type = ["cdylib", "lib"]